--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cartão de Visita | Enzo Viola</title>
     
+    <!-- Google Fonts: Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     
+    <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
     <style>
@@ -108,7 +110,7 @@
         }
 
         .contact-icons a {
-            color: var(--primary-color);
+            color: var(--light-color);
             font-size: 1.8rem;
             margin: 0 15px;
             transition: transform 0.3s ease;
@@ -223,7 +225,7 @@
 
     <main class="card">
         <header class="header">
-            <img src="https://cdn0030.qrcodechimp.com/qr/PROD/6466d0c8d38a7005067a13cd/fm/2_compressed_1_m.jpg" alt="Foto de Enzo Viola" class="profile-pic">
+            <img src="https://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K1184842P6" alt="Foto de Enzo Viola" class="profile-pic">
             <div class="header-info">
                 <h1>Enzo Viola</h1>
                 <p class="title">Centro Universitário São Camilo</p>
@@ -296,7 +298,8 @@
             <section class="section">
                 <h2 class="section-title">Documentos</h2>
                 <div class="link-grid">
-                     <a href="https://cdn03.qrcodechimp.com/qr/PROD/6466d0c8d38a7005067a13cd/fm/currculo_acadmico.pdf" target="_blank" class="link-button">
+                     <!-- AQUI FOI FEITA A ALTERAÇÃO -->
+                     <a href="currculo_acadmico.pdf" target="_blank" class="link-button">
                         <i class="fas fa-file-pdf"></i>
                         <span>Acessar Currículo Acadêmico (PDF)</span>
                     </a>
